--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -556,7 +556,8 @@
             "caused: java.io.ioexception",
             "conflicts between attempted install",
             "failed to generate fip_aid.bin",
-            "found 0 unit-test failure"
+            "found 0 unit-test failure",
+            "conflicting requests"
         ]
     }
 }
