--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -181,6 +181,7 @@
             "error: rpc failed; curl 56 gnutls": "Connectivity Error: Git",
             "error cloning remote repo": "Connectivity Error: Git",
             "fatal: unable to read tree": "Configuration Error: Git",
+            "unknown revision or path not in the working tree": "Configuration Error: Git",
             
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Artifactory Related Error",
             "artifact error": "Connectivity Error: Artifactory",
@@ -556,6 +557,7 @@
             "conflicts between attempted install",
             "failed to generate fip_aid.bin",
             "found 0 unit-test failure",
+            "looking for pthread.h - not found",
             "conflicting requests"
         ]
     }
