[SPLUNK] - Failure keyword replaced with detailed error - removed error patterns, not needed anymore

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -5,7 +5,9 @@
             "this is a comment to segmentized common error type to be used for different error category - pre-requisite",
             "running on ",
             "this is a comment to segmentized common error type to be used for different error category - generic error type",
-            "failure",
+            "fetcher failure",
+            "failure post condition",
+            "link failure",
             "failed",
             "not available",
             "not found",
@@ -29,7 +31,6 @@
             "no rule to make target",
             "finished: failure",
             "error: script returned exit code 1",
-            "error: script returned exit code -1",
             "makefile:",
             "non-zero exit code",
             "script_error= 1",
@@ -47,7 +48,8 @@
             "connection error sending email",
             "results is not yet ready",
             "error cloning",
-            "exec user process"
+            "exec user process",
+            "couldn't find any revision"
         ],
         
         "error_category": {
@@ -90,7 +92,6 @@
             "core-image-ese-initramfs-base": "Compilation Error",
             "do_fetch": "Compilation Error",
             "error: task ": "Compilation Error",
-            "error: logfile of failure stored": "Compilation Error",
             "function failed: " : "Compilation Error",
             "do_configure" : "Compilation Error",
             "error: nothing rprovides" : "Compilation Error",
@@ -157,7 +158,6 @@
             "failed to build": "Compilation Error",
             "hddlunite not found! skipping build of hddl extension": "Compilation Error",
             "tar.gz: not found in archive": "Compilation Error",
-            "exiting with failure status due to previous errors": "Compilation Error",
             "file/directory not found in workspace": "Compilation Error",
             "not found in packages path": "Compilation Error",
             "fatal: remote upstream already exists": "Compilation Error",
@@ -312,17 +312,7 @@
             "[debug]",
             "commit message:",
             "echo",
-            "onerrorcontinueanalysis",
-            "pending error messages",
-            "handle_error",
-            "raise error",
             "diagnostic: edss2 : json call",
-            "errorlib.c",
-            "0 error(s)",
-            "erroruixmlwriter.cpp",
-            "errorhandlingcontroller.js",
-            "errorlib.lib errorlib.obj",
-            "errorlib.obj  errorlib.lib",
             "c:\\program files (x86)\\microsoft visual studio",
             "release>cd c:\\jenkins\\workspace",
             "release>nmake clean all",
@@ -330,152 +320,34 @@
             ">if 0 neq 0 goto eof",
             "warning:root:[abi_warn_00000010]",
             "cache entry deserialization failed",
-            "enoerror",
-            "eusererrorcode",
-            "werror",
             "running on node:",
             "\\..\\sources\\graph",
-            "error  ...",
             "acpi....",
-            "packages\\errorlib\\winx64\\debug",
-            "xlsdk_input.lib(_error.obj) : warning",
-            ": warning c","error(s) and ",
-            "no error and failure messages",
-            "finished: failure",
             "job failed!!!",
-            "_tdperrormessage",
-            "2 error(s)",
-            "skipped due to earlier failure(s)",
-            "groovy.control.errorcollector.failiferrors",
-            "erroranalysislib.cpp",
-            "erroranalysislib",
-            ";>failure</h1>",
-            "exitonfailure","errorlogger",
-            "if (enoerror !","eusererrorcode",
-            "ekernelerrorcode","errorlib",
-            "--disable-werror","lasterror.",
             "failed!",
             "--skip-recursive",
-            "error: timeout after",
-            "error: error: no workspace found!",
             "running on ",
-            "error_lib.",
-            "tx_thread_stack_error_handler.c",
-            "tx_thread_stack_error_notify.c",
-            "error_id.h",
-            "error_isolation.c",
-            "scriptcompletionorfailurestatus",
             "controlopstatus[] = { ",
-            "updatingerrormsgforfilenotfound",
             "../../sources/",
-            "testerrorverification","errors_config.csv",
-            "'strerror'"," retryerror","build errors",
             "summary: 1 task failed:",
-            "0 errors.",
             "note: tasks summary:",
-            "summary:","/system_error",
-            "error_constants.h","failures:",
-            "test_parity error injection",
             "head is now at",
-            "libgpg-error",
-            "eventfacet-error",
-            "error summary","check error:",
-            "warning:",": [ {","*** [install] error 1",
-            "error: script returned exit code",
-            "data-error-fix.patch",
-            "error-semi-colon-missing.patch",
-            "0153-sha256_hcu_failure_fix.patch",
-            "link-error-for-smcc-calls.patch",
             "not found modules for:",
             "not found deltainfo for:",
             "not found updateinfo for:",
             "not found other for:",
-            "xlink_error","note: ",
-            "errormessagedataexchanger",
-            "ioerror:",
             "download&failedmirror",
-            "errors occurred!",
-            "cmakeerror.log",
-            "-wno-error=",
             "applying:",
             "opencv.patch",
-            "error-inject.",
-            "error-inj",
-            "error.mod.",
-            "strerror_r",
             "currror.c.o",
-            "error_listener.",
-            "qerrormessage.png",
-            "qerrormessage.html",
-            "qerrormessage-members.html",
-            "error-members.html",
-            "error-obsolete.html",
-            "errorhandler",
-            "error-clang.png",
-            "error-message.png",
-            "errors.ui",
-            "errordialog.qml",
-            "qerrormessage",
-            "qscxmlerror",
-            "qcborerror",
-            "qcborparsererror",
-            "qsystemerror_p.h",
-            "qjsonparseerror",
-            "qerrorfn_p.h",
-            "qvalidationerror_p.h",
-            "qsqlerror",
-            "error_messages",
-            "qdbuserror",
-            "qxmlerrorhandler",
-            "qsslerror",
-            "qqmlerror",
-            "qv4errorobject_p.h",
-            "qv4domerrors_p.h",
-            "qv4sqlerrors_p.h",
-            "error_handler.cpp",
-            "kerror",
-            "-werror",
-            "error_r",
-            "error-injection.h",
-            "errors-when-building-with.patch",
             ".patch",
-            "error support",
-            "error_allocation_failed",
-            "error_cflags",
-            "errors summary",
-            "error_handling",
-            "errors... no",
-            "_error_",
-            "pcie_errors_",
-            "errorconf",
-            "errorstatus",
-            "error0reporting",
-            "error1reporting",
-            "errorlog",
-            "error-perl",
-            "printerrorlevel",
-            "errors.",
-            "error: info is different",
-            "error-dump.",
-            "stderr_console.",
-            "error-codes.rst",
-            "error-recovery.",
-            "error-inj.",
             "expected_stderr",
             "failed in branch ",
             "warning",
-            "memory-failure.",
             "invalid command",
             "create mode",
-            "/errors/",
-            "error.",
-            "failure_",
-            "error!  the dkms.conf",
-            "gai_strerror",
             "stderr: remote:",
             "git did not send all necessary objects",
-            "jsondecodeerror",
-            "error: index-pack",
             "fatal: early eof",
             "fatal: index-pack failed",
             "fatal: expected flush after ref listing",
@@ -486,72 +358,30 @@
             "config_dm_eth",
             "failed to build",
             "failed building",
-            "errordocument",
-            "error writing to file",
-            "read error",
-            "timeout error",
             "could not remove config section",
-            "protocol error",
-            "errorinj",
-            "errorcodes",
             "could not generate configuration",
-            "authentication error",
             "stderr begin",
             "stderr end",
             "please refer to logs for more information",
             ".o: failed",
             "1 hunk failed",
             "p.stderr",
-            "hddlunite_build_error",
             "failed to unpack tree",
-            "error: [function]",
-            "authorizationerror",
-            "_haderror",
-            "errorcount",
             "copy of the patch that failed",
             "cannot fork()",
             "git upload-pack",
             "pycrypto",
             "v2020.07 release",
-            "the remote end hung up unexpectedly",
-            "patch failures can be resolved",
+            "the remote end hung up unexpectedly",\
             "pthread_create",
-            "error_cxxflags",
-            "error_objcflags",
             "failed to create commit hook symlink",
             "build plugin documentation",
-            "errorignore.html",
-            "gsterrorignore",
-            "cudageterrorstring",
-            "curl: (22) the requested url returned error",
-            "importerror",
             "bc: not found",
             "server log for this session",
-            "error:    /build/cje/",
-            "runtimeerror",
-            "test_common_buildtoolerror",
-            "test_ecc_ecctoolerror",
-            "test_eot_eottoolerror",
             "local header:",
             "- failed -",
-            "errorentrypoint",
-            "script_error=0",
-            "errorlevel= 0",
             "basegpiocheckconflictlib",
-            "fsperrorinfolib",
             "xlink_secure_err",
-            "ibeccerrorreporting",
-            "{ [error: error]",
-            "fsperrorinfo.c",
-            "errorlevel=0",
-            "errorstop",
-            "script_error= 0",
-            "checkfsperrorinfohob",
-            "checkfsperrorinfohobdxe.inf",
-            "checkfsperrorinfohobdxe.c",
-            "checkfsperrorinfohobdxe.efi",
-            "checkfsperrorinfohobdxe",
-            "checkfsperrorinfohobdxe.dll",
             "not found (optional)",
             "failed to reset the tallylog entry of user",
             "mcafee antivirus defination not found",
@@ -560,12 +390,10 @@
             "libraries and headers were not found",
             "package '",
             "failed-syscalls",
-            "failure.log",
             "conflict.c",
             "caused: java.io.ioexception",
             "conflicts between attempted install",
             "failed to generate fip_aid.bin",
-            "found 0 unit-test failure",
             "looking for pthread.h - not found",
             "conflicting requests",
             "conflict (modify/delete):",
