[SPLUNK] Misc error addition

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -401,7 +401,8 @@
             "curl-config failed",
             "openembedded-core not found",
             "tests failed  : 0",
-            "/tests failed  :/"
+            "/tests failed  :/",
+            ""stderr_console.","
         ]
     }
 }
