Update error_config.json to handle misc error 8Oct2020

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -304,6 +304,7 @@
             "test result   :  -1": "Test Error: Simic",
             "no such container": "System Error",
             "there are no nodes": "System Error",
+            "error: the process \"python.exe\" not found": "System Error",
             "no space left on device": "System Error"
         },
         
