[SPLUNK] Removed First Level keyword: Failed - Detailed errors added - Removed Patterns not needed

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -8,7 +8,38 @@
             "fetcher failure",
             "failure post condition",
             "link failure",
-            "failed",
+            "expectation failed",
+            "patch failed",
+            "binary scan failed",
+            "startup failed",
+            "copy failed",
+            "function failed",
+            "libraries failed",
+            "subcommand failed",
+            "authentication failed",
+            "pulling failed",
+            "build: failed",
+            "verify failed",
+            "failed to load",
+            "failed to build",
+            "failed in branch",
+            "failed to fetch",
+            "failed to push",
+            "failed to deploy",
+            "failed to merge",
+            "failed to search",
+            "failed to search artifact",
+            "failed to run",
+            "failed: connection",
+            "error occurred for request",
+            "patchset is failed",
+            "failed sanity",
+            "failed after second try",
+            "error occurred during build",
+            "execution is failed",
+            "scanning is failed",
+            "do_fetch: failed",
+            "failed with exit code",
             "not available",
             "not found",
             "no such property",
@@ -30,8 +61,9 @@
             "this is a comment to segmentized common error type to be used for different error category - compilation error type",
             "no rule to make target",
             "finished: failure",
-            "error: script returned exit code 1",
+            "script returned exit code 1",
             "makefile:",
+            "gnumakefile:",
             "non-zero exit code",
             "script_error= 1",
             "internal error",
@@ -49,12 +81,15 @@
             "results is not yet ready",
             "error cloning",
             "exec user process",
-            "couldn't find any revision"
+            "couldn't find any revision",
+            "error fetching",
+            "error: cannot fetch"
         ],
         
         "error_category": {
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Compilation Related Error",
-            "nmake : fatal error" : "Compilation Error",   
+            "nmake : fatal error" : "Compilation Error",
+            "link : fatal error" : "Compilation Error",
             "error while encapsulate fd image": "Compilation Error",
             "error while add some named ffs file into the fd image file": "Compilation Error",
             "must supply an action name and an arg list": "Compilation Error",
@@ -71,7 +106,6 @@
             "drivers/spi/spi-dw.h": "Compilation Error",
             "thunderbay": "Compilation Error",
             "mainline-tracking": "Compilation Error",
-            "patch failed": "Compilation Error",
             "meson": "Compilation Error",
             "mesa": "Compilation Error",
             "error: cairo": "Compilation Error",
@@ -90,8 +124,8 @@
             "iso-codes-4.2-r0": "Compilation Error",
             "ore-image-ese-initramfs-base-1.0-r0": "Compilation Error",
             "core-image-ese-initramfs-base": "Compilation Error",
-            "do_fetch": "Compilation Error",
-            "error: task ": "Compilation Error",
+            "do_fetch: failed": "Compilation Error",
+            "error: task": "Compilation Error",
             "function failed: " : "Compilation Error",
             "do_configure" : "Compilation Error",
             "error: nothing rprovides" : "Compilation Error",
@@ -145,7 +179,6 @@
             "fatal: manifest": "Compilation Error",
             "build failed:": "Compilation Error",
             "no rule to make target": "Compilation Error",
-            "failed: cmakefiles/hddl_bypass_shim": "Compilation Error",
             "build stopped: subcommand failed": "Compilation Error",
             "[drivers/misc/xlink-core/xlink.ko] undefined!": "Compilation Error",
             "debug build: file does not exists!": "Compilation Error",
@@ -162,6 +195,11 @@
             "not found in packages path": "Compilation Error",
             "previous ipdb not found, fall back to full compilation": "Compilation Error",
             "fatal: remote upstream already exists": "Compilation Error",
+            "patch failed": "Compilation Error",
+            "execution is failed (exit code: 1)": "Compilation Error",
+            "bsp build: failed": "Compilation Error",
+            "daily build: failed": "Compilation Error",
+            "error: cannot fetch": "Compilation Error",
             
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Git Related Error",
             "gitlab error": "Application Error: Git",
@@ -170,7 +208,7 @@
             "the remote end hung up unexpectedly": "Application Error: Git",
             "unable to access 'https://gitlab.devtools.intel.com": "Connectivity Error: Git",
             "gitlab is not responding": "Connectivity Error: Git",
-            "authentication failed for": "Connectivity Error: Git",
+            "authentication failed for 'https://gitlab": "Connectivity Error: Git",
             "remote: unauthorized":"Configuration Error: Git",
             "error cloning": "Connectivity Error: Git",
             "git clone": "Connectivity Error: Git",
@@ -181,7 +219,6 @@
             "error fetching remote": "Connectivity Error: Git",
             "an optional update for edkrepo is available and can be installed using: edkrepo update": "Configuration Error: Git",
             "fatal: remote upstream already exists": "Configuration Error: Git",
-            "error: rpc failed; curl 56 gnutls": "Connectivity Error: Git",
             "error cloning remote repo": "Connectivity Error: Git",
             "fatal: unable to read tree": "Configuration Error: Git",
             "unknown revision or path not in the working tree": "Configuration Error: Git",
@@ -227,6 +264,8 @@
             "source list is empty": "Configuration Error: Klocwork",
             "kwadmin: authentication failed": "Configuration Error: Klocwork",
             "rt.jar: error reading zip file": "Connectivity Error: Klocwork",
+            "error occurred during build: c/c++ defects detection stage failed": "Application Error: Klocwork",
+            "error occurred during build: the server project configuration": "Application Error: Klocwork",
             
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Jenkins Related Error",
             "couldn't find any revision to build": "Configuration Error: Jenkins",
@@ -246,6 +285,7 @@
             "[errno 111] connection refused": "Connectivity Error: BDBA",
             "response got: unauthorized": "Connectivity Error: BDBA",
             "urlerror: [errno 10054] an existing connection was forcibly closed": "Connectivity Error: BDBA",
+            "hudson.AbortException: script returned exit code 1": "Connectivity Error: BDBA",
             
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "EMAIL Error",
             "connection error sending email": "Connectivity Error: EMAIL",
@@ -309,7 +349,6 @@
         },
         
         "patterns": [
-            "failed to sign: ",
             "abi_info:",
             "[debug]",
             "commit message:",
@@ -321,29 +360,23 @@
             "pluginuixmlwriter.obj rootuixmlwriter.obj",
             ">if 0 neq 0 goto eof",
             "warning:root:[abi_warn_00000010]",
-            "cache entry deserialization failed",
             "running on node:",
             "\\..\\sources\\graph",
             "acpi....",
-            "job failed!!!",
-            "failed!",
             "--skip-recursive",
             "running on ",
             "controlopstatus[] = { ",
             "../../sources/",
-            "summary: 1 task failed:",
             "note: tasks summary:",
             "head is now at",
             "not found modules for:",
             "not found deltainfo for:",
             "not found updateinfo for:",
             "not found other for:",
-            "download&failedmirror",
             "applying:",
             "opencv.patch",
             "currror.c.o",
             "expected_stderr",
-            "failed in branch ",
             "warning",
             "invalid command",
             "create mode",
@@ -357,53 +390,40 @@
             "pathspec '0' did not match",
             "running setup.py",
             "config_dm_eth",
-            "failed to build",
-            "failed building",
             "could not remove config section",
             "could not generate configuration",
             "stderr begin",
             "stderr end",
             "please refer to logs for more information",
-            ".o: failed",
-            "1 hunk failed",
             "p.stderr",
-            "failed to unpack tree",
-            "copy of the patch that failed",
             "cannot fork()",
             "git upload-pack",
             "pycrypto",
             "v2020.07 release",
             "pthread_create",
-            "failed to create commit hook symlink",
             "build plugin documentation",
             "bc: not found",
             "server log for this session",
             "local header:",
-            "- failed -",
             "basegpiocheckconflictlib",
             "xlink_secure_err",
             "not found (optional)",
-            "failed to reset the tallylog entry of user",
             "mcafee antivirus defination not found",
             "symbol '__alt_data_end' not found in nm-output",
             "_dir not found setting to default",
             "libraries and headers were not found",
             "package '",
-            "failed-syscalls",
             "conflict.c",
             "caused: java.io.ioexception",
             "conflicts between attempted install",
-            "failed to generate fip_aid.bin",
             "looking for pthread.h - not found",
             "conflicting requests",
             "conflict (modify/delete):",
             ". . . no (",
             ".h not found",
-            "curl-config failed",
             "openembedded-core not found",
-            "tests failed  : 0",
-            "/tests failed  :/",
-            "stderr_console."
+            "stderr_console.",
+            "/Makefile:"
         ]
     }
 }
