Build failed error updated

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -22,7 +22,6 @@
             "verify failed",
             "failed to load",
             "failed to build",
-            "failed in branch",
             "failed to fetch",
             "failed to push",
             "failed to deploy",
@@ -70,7 +69,7 @@
             "error 2",
             "error 7000",
             "error 3000",
-            "build fail",
+            "build failed",
             "this is a comment to segmentized common error type to be used for different error category - application error type",
             "[error] kwadmin:",
             "could not checkout",
@@ -154,7 +153,6 @@
             "makefile:": "Compilation Error",
             "prikey size is not same as pubkey": "Compilation Error",
             "attestation server read": "Compilation Error",
-            "failed in branch build - bypass": "Compilation Error",
             "filenotfounderror:":"Compilation Error",
             "command error": "Compilation Error",
             "code of compile_tool": "Compilation Error",
@@ -177,7 +175,7 @@
             "qa staging was broken by the package built": "Compilation Error",
             "could not checkout": "Compilation Error",
             "fatal: manifest": "Compilation Error",
-            "build failed:": "Compilation Error",
+            "build failed": "Compilation Error",
             "no rule to make target": "Compilation Error",
             "build stopped: subcommand failed": "Compilation Error",
             "[drivers/misc/xlink-core/xlink.ko] undefined!": "Compilation Error",
