[SPLUNK] Uppercase character changed to lowercase

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -425,7 +425,7 @@
             ".h not found",
             "openembedded-core not found",
             "stderr_console.",
-            "/Makefile:"
+            "/makefile:"
         ]
     }
 }
