--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -72,7 +72,6 @@
             "build failed",
             "this is a comment to segmentized common error type to be used for different error category - application error type",
             "[error] kwadmin:",
-            "could not checkout",
             "other error:",
             "server error",
             "connection error sending email",
@@ -175,7 +174,6 @@
             "error: core-image-ese-dev-1.0-r0 do_rootfs": "Compilation Error",
             "failed sanity test": "Compilation Error",
             "qa staging was broken by the package built": "Compilation Error",
-            "could not checkout": "Compilation Error",
             "fatal: manifest": "Compilation Error",
             "build failed": "Compilation Error",
             "no rule to make target": "Compilation Error",
@@ -229,6 +227,7 @@
             "fatal: unable to access 'https://git": "Connectivity Error: Git",
             "fatal: couldn't find remote ref": "Connectivity Error: Git",
             ".git not found": "Configuration Error: Git",
+            "fatal: cannot obtain manifest https://git": "Configuration Error: Git",
             
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Artifactory Related Error",
             "artifact error": "Connectivity Error: Artifactory",
