--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -84,7 +84,8 @@
             "please check bblayers",
             "traceback (most recent call last):",
             "gitlab error",
-            "error is not recoverable"
+            "error is not recoverable",
+            "hsdes id is not given"
         ],
         
         "error_category": {
@@ -199,7 +200,6 @@
             "daily build: failed": "Compilation Error",
             "error: cannot fetch": "Compilation Error",
             "traceback (most recent call last):": "Compilation Error",
-            "error: script returned exit code 1": "Compilation Error",
             
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "Git Related Error",
             "gitlab error": "Application Error: Git",
@@ -315,6 +315,7 @@
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "HSDES Related Error",
             "keyerror:": "Application Error: HSDES",
             "fail to update hsdes field": "Application Error: HSDES",
+            "hsdes id is not given": "Application Error: HSDES",
             
             "This is a comment which were used to segmentized the JSON for error category. It is impossible this line will match any error mesg": "ABI Related Error",
             "abi_warning:": "Application Error: ABI",
